# AndroidJNIDemo

./: .gitignore  README.md  build.gradle  config.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/gavinandre/jnidemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_buf.cpp  android_buf.h  android_buf.hpp  jni_lib.cpp  jni_lib.h  jni_lib.hpp  native-lib.cpp  native-lib.h  native-lib.hpp  native_lib.cpp  native_lib.hpp
app/src/main/cpp/bean/: complex_bean.hpp  simple_bean.hpp
app/src/main/cpp/utils/: android_log.h  jni_lib.hpp  jni_list_lib.hpp  uuid_lib.hpp
app/src/main/java/com/gavinandre/androidjnidemo/: NativeLib.java
app/src/main/java/com/gavinandre/androidjnidemo/activity/: JLogActivity.kt  MainActivity.kt  MatBitmapConvertActivity.kt  NativeActivity.kt  RtspActivity.kt  SystemCameraActivity.kt  UsbCameraActivity.kt  UvcCameraActivity.java
app/src/main/java/com/gavinandre/androidjnidemo/base/: MyApplication.kt
app/src/main/java/com/gavinandre/androidjnidemo/bean/: ComplexBean.kt  SimpleBean.kt
app/src/main/java/com/gavinandre/androidjnidemo/utils/: FileUtil.java
app/src/main/java/com/gavinandre/jnidemo/: FileUtil.java  MainActivity.kt  NativeLib.java
app/src/main/java/com/gavinandre/jnidemo/activity/: MainActivity.kt  MatBitmapConvertActivity.kt  NativeActivity.kt  RtspActivity.kt  SystemCameraActivity.kt  UsbCameraActivity.kt
app/src/main/java/com/gavinandre/jnidemo/base/: MyApplication.kt
app/src/main/java/com/gavinandre/jnidemo/bean/: ComplexBean.kt  SimpleBean.kt
app/src/main/java/com/gavinandre/jnidemo/utils/: FileUtil.java
app/src/main/res/layout/: activity_jlog.xml  activity_main.xml  activity_mat_bitmap_convert.xml  activity_native.xml  activity_rtsp.xml  activity_system_camera.xml  activity_usb_camera.xml  activity_uvc_camera.xml  activity_uvc_dual_camera.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/gavinandre/jnidemo/: ExampleUnitTest.kt
cameraprocesslibrary/: CMakeLists.txt  build.gradle
cameraprocesslibrary/src/main/: AndroidManifest.xml
cameraprocesslibrary/src/main/cpp/: CMakeLists.txt  camera_process_jni.cpp  camera_process_jni.h  camera_process_lib.hpp
cameraprocesslibrary/src/main/cpp/include/opencv2/: cvconfig.h
cameraprocesslibrary/src/main/cpp/util/: android_log.h  jni_lib.hpp
cameraprocesslibrary/src/main/cpp/util/v4l2/: v4l_achieve.cpp  v4l_achieve.h  v4l_lib.hpp
cameraprocesslibrary/src/main/java/com/gavinandre/cameraprocesslibrary/: CameraProcessLib.java
cameraprocesslibrary/src/main/java/com/gavinandre/cameraprocesslibrary/systemcamera/: SystemCameraFragment.kt  SystemCameraFragment1.kt  SystemCameraTextureView.kt  SystemCameraTextureView1.kt
cameraprocesslibrary/src/main/java/com/gavinandre/cameraprocesslibrary/usbcamera/: UsbCameraFragment.kt  UsbCameraTextureView.kt
cameraprocesslibrary/src/main/java/com/gavinandre/cameraprocesslibrary/utils/: Camera1Manager.kt  Camera1Manager1.kt  CameraProcessUtil.java
cameraprocesslibrary/src/main/res/layout/: fragment_system_camera.xml  fragment_system_camera1.xml  fragment_usb_camera.xml
cameraprocesslibrary/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
imageprocesslibrary/: CMakeLists.txt  build.gradle  proguard-rules.pro
imageprocesslibrary/src/androidTest/java/com/lingzhi/imageprocesslibrary/: ExampleInstrumentedTest.java
imageprocesslibrary/src/main/: AndroidManifest.xml
imageprocesslibrary/src/main/cpp/: CMakeLists.txt  base64.cpp  image_process.cpp  image_process.h  image_process_jni.cpp  image_process_jni.h  image_process_lib.hpp
imageprocesslibrary/src/main/cpp/include/opencv2/: cvconfig.h
imageprocesslibrary/src/main/cpp/utils/: android_log.h  base64.hpp  jni_lib.hpp
imageprocesslibrary/src/main/java/com/gavinandre/imageprocesslibrary/: ImageProcess.java
imageprocesslibrary/src/main/java/com/lingzhi/imageprocesslibrary/: ImageProcess.java
imageprocesslibrary/src/main/res/values/: strings.xml
imageprocesslibrary/src/test/java/com/lingzhi/imageprocesslibrary/: ExampleUnitTest.java
nativeloglibrary/: build.gradle
nativeloglibrary/src/main/: AndroidManifest.xml
nativeloglibrary/src/main/cpp/: CMakeLists.txt  jlog.hpp  jlog_lib.cpp
nativeloglibrary/src/main/java/com/gavinandre/nativeloglibrary/: JLogLib.java
rtsplibrary/: build.gradle
rtsplibrary/src/main/: AndroidManifest.xml
rtsplibrary/src/main/cpp/: CMakeLists.txt  native-lib.cpp
rtsplibrary/src/main/java/com/gavinandre/rtsplibrary/: NativeCallback.java  RtspClient.java  RtspEndpointInterface.java  RtspPlayerView.java  RtspPlayerView.kt
uvccameralibrary/: build.gradle
uvccameralibrary/src/main/: AndroidManifest.xml
uvccameralibrary/src/main/cpp/: CMakeLists.txt  uvc_camera.cpp  uvc_camera.hpp
uvccameralibrary/src/main/cpp/include/: jpegUtil.hpp
uvccameralibrary/src/main/java/com/gavinandre/uvccameralibrary/: BuildCheck.java  CameraPreview.java  CameraViewInterface.java  DeviceFilter.java  HandlerThreadHandler.java  USBMonitor.java  USBVendorId.java  UsbCameraLib.java  UsbCameraManager.java
uvccameralibrary/src/main/res/xml/: device_filter.xml
